--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,19 @@
 server.port=8322
 server.servlet.context-path=/
-# MySQL 8 ????
+# MySQL 8 链接信息
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=766188487
-# ?????? MySQL8??????????serverTimezone=GMT%2B8
+# 数据库版本是 MySQL8 的话必须加这个时区信息 serverTimezone=GMT%2B8
 spring.datasource.url=jdbc:mysql://ernest.work:3306/yiyue?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 #spring.datasource.url=jdbc:mysql://localhost:3306/useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-# ?? MyBatis
-mybatis.mapper-locations=classpath:mapper/*.xml
-# ?? thymeleaf
+# 配置 thymeleaf 根路径
 spring.web.resources.static-locations=classpath:/templates/,classpath:/static/
-# TODO ??????    ??????????????????????????????
+# TODO thymeleaf 缓存，开发过程中关掉，方便热部署，实际部署时打开，快加载
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
-# TODO ?????  ????????????
+# TODO 热加载开关
 spring.devtools.restart.enabled=true
-# ?????????
 spring.devtools.restart.additional-paths=src/java/main
-# ??????????
 spring.devtools.restart.exclude=static/**,public/**,WEB-INF/**
