--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=766188487
 # 数据库版本是 MySQL8 的话必须加这个时区信息 serverTimezone=GMT%2B8
-spring.datasource.url=jdbc:mysql://ernest.work:3306/yiyue?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://ernest.work:3306/trans_dt?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 #spring.datasource.url=jdbc:mysql://localhost:3306/useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 # 配置 thymeleaf 根路径
 spring.web.resources.static-locations=classpath:/templates/,classpath:/static/
