--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://ernest.work:3306/trans_dt?useSSL=false&useUni
 # 配置 thymeleaf 根路径
 spring.web.resources.static-locations=classpath:/templates/,classpath:/static/
 # TODO thymeleaf 缓存，开发过程中关掉，方便热部署，实际部署时打开，快加载
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 # TODO 热加载开关
